fix z-index of plate/image/nav on smaller screen

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ html {
   left: 5rem;
   display: flex;
   flex-direction: column;
+  z-index:3;
 }
 
 .nav-item {
@@ -270,6 +271,7 @@ html {
   right: -20%;
   border-radius: 50% 0 0 50%;
   transform: rotateZ(-30deg);
+  z-index: 1;
 }
 
 @media (max-width: 1600px) {
@@ -300,6 +302,7 @@ html {
 
   .img-right {
     bottom: 15rem;
+    z-index: 2;
   }
 
   .plate {
